--- a/case study 4/Model_S.ipynb
+++ b/case study 4/Model_S.ipynb
@@ -95,19 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10173, 65)\n",
-      "(10503, 65)\n",
-      "(5910, 65)\n",
-      "(9792, 65)\n",
-      "(7027, 65)\n",
-      "43405\n"
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/zl/4qqdwn7s6wv34lrr9sxt7tf40000gn/T/ipykernel_53300/2888193755.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mrecords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mindx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdir_files\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#     temp_data = arff.loadarff(os.getcwd() + '/data/' +f)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
      ]
     }
    ],
@@ -117,21 +116,118 @@
     "\n",
     "records = 0\n",
     "\n",
-    "for f in dir_files:\n",
+    "for indx, f in dir_files:\n",
+    "    print(indx,f)\n",
+    "#     temp_data = arff.loadarff(os.getcwd() + '/data/' +f)\n",
+    "    \n",
+    "#     temp_df = pd.DataFrame(temp_data[0])\n",
+    "#     temp_df['year']=1\n",
+    "#     print(temp_df)\n",
+    "#     pd.DataFrame()\n",
+    "#     print(temp_df.shape)\n",
+    "#     data_dict.update({f:temp_df})\n",
+    "#     full_df = pd.concat([full_df, temp_df])\n",
+    "#     records += temp_df.shape[0]\n",
+    "\n",
+    "# print(records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Attr1    Attr2     Attr3    Attr4     Attr5     Attr6     Attr7  \\\n",
+      "0     0.088238  0.55472  0.011340  1.02050  -66.5200  0.342040  0.109490   \n",
+      "1    -0.006202  0.48465  0.232980  1.59980    6.1825  0.000000 -0.006202   \n",
+      "2     0.130240  0.22142  0.577510  3.60820  120.0400  0.187640  0.162120   \n",
+      "3    -0.089951  0.88700  0.269270  1.52220  -55.9920 -0.073957 -0.089951   \n",
+      "4     0.048179  0.55041  0.107650  1.24370  -22.9590  0.000000  0.059280   \n",
+      "...        ...      ...       ...      ...       ...       ...       ...   \n",
+      "5905  0.012898  0.70621  0.038857  1.17220  -18.9070  0.000000  0.013981   \n",
+      "5906 -0.578050  0.96702 -0.800850  0.16576  -67.3650 -0.578050 -0.578050   \n",
+      "5907 -0.179050  1.25530 -0.275990  0.74554 -120.4400 -0.179050 -0.154930   \n",
+      "5908 -0.108860  0.74394  0.015449  1.08780  -17.0030 -0.108860 -0.109180   \n",
+      "5909 -0.105370  0.53629 -0.045578  0.91478  -56.0680 -0.105370 -0.109940   \n",
+      "\n",
+      "        Attr8    Attr9    Attr10  ...    Attr57   Attr58    Attr59    Attr60  \\\n",
+      "0     0.57752  1.08810  0.320360  ...  0.275430  0.91905  0.002024    7.2711   \n",
+      "1     1.06340  1.27570  0.515350  ... -0.012035  1.00470  0.152220    6.0911   \n",
+      "2     3.05900  1.14150  0.677310  ...  0.192290  0.87604  0.000000    8.7934   \n",
+      "3     0.12740  1.27540  0.113000  ... -0.796020  0.59074  2.878700    7.6524   \n",
+      "4     0.81682  1.51500  0.449590  ...  0.107160  0.77048  0.139380   10.1180   \n",
+      "...       ...      ...       ...  ...       ...      ...       ...       ...   \n",
+      "5905  0.41600  1.67680  0.293790  ...  0.043904  1.01220  1.259400   13.4720   \n",
+      "5906 -0.40334  0.93979 -0.390040  ...  1.482000  1.06410 -0.018084  110.7200   \n",
+      "5907 -0.26018  1.17490 -0.326590  ...  0.548240  0.85112 -0.522430    9.8526   \n",
+      "5908  0.12531  0.84516  0.093224  ... -1.167700  1.18320  6.092400   13.8860   \n",
+      "5909  0.86460  0.95040  0.463670  ... -0.227250  1.05220  0.003196    7.7332   \n",
+      "\n",
+      "       Attr61   Attr62  Attr63   Attr64  class  Year  \n",
+      "0      4.7343  142.760  2.5568  3.25970   b'0'     4  \n",
+      "1      3.2749  111.140  3.2841  3.37000   b'0'     4  \n",
+      "2      2.9870   71.531  5.1027  5.61880   b'0'     4  \n",
+      "3      3.3302  147.560  2.4735  5.92990   b'0'     4  \n",
+      "4      4.0950  106.430  3.4294  3.36220   b'0'     4  \n",
+      "...       ...      ...     ...      ...    ...   ...  \n",
+      "5905  12.4320   49.117  7.4313  2.27990   b'1'     4  \n",
+      "5906  44.7590   81.220  4.4940  5.13050   b'1'     4  \n",
+      "5907   3.4892  207.870  1.7559  9.95270   b'1'     4  \n",
+      "5908   6.0769   83.122  4.3911  0.95575   b'1'     4  \n",
+      "5909   4.7174  136.850  2.6672  2.79270   b'1'     4  \n",
+      "\n",
+      "[5910 rows x 66 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_dict = {}\n",
+    "full_df = pd.DataFrame()\n",
+    "listy = []\n",
+    "records = 0\n",
+    "for indx, f in enumerate(sorted(dir_files)):\n",
     "    temp_data = arff.loadarff(os.getcwd() + '/data/' +f)\n",
+    "    if indx\n",
     "    temp_df = pd.DataFrame(temp_data[0])\n",
-    "    print(temp_df.shape)\n",
+    "    temp_df[\"Year\"] = indx\n",
     "    data_dict.update({f:temp_df})\n",
     "    full_df = pd.concat([full_df, temp_df])\n",
     "    records += temp_df.shape[0]\n",
     "\n",
-    "print(records)"
+    "print(temp_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4    5910\n",
+       "Name: Year, dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df[\"Year\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -335,6 +431,76 @@
    ],
    "source": [
     "full_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "X1 net profit / total assets\n",
+    "X2 total liabilities / total assets\n",
+    "X3 working capital / total assets\n",
+    "X4 current assets / short-term liabilities\n",
+    "X5 [(cash + short-term securities + receivables - short-term liabilities) / (operating expenses - depreciation)] * 365\n",
+    "X6 retained earnings / total assets\n",
+    "X7 EBIT / total assets\n",
+    "X8 book value of equity / total liabilities\n",
+    "X9 sales / total assets\n",
+    "X10 equity / total assets\n",
+    "X11 (gross profit + extraordinary items + financial expenses) / total assets\n",
+    "X12 gross profit / short-term liabilities\n",
+    "X13 (gross profit + depreciation) / sales\n",
+    "X14 (gross profit + interest) / total assets\n",
+    "X15 (total liabilities * 365) / (gross profit + depreciation)\n",
+    "X16 (gross profit + depreciation) / total liabilities\n",
+    "X17 total assets / total liabilities\n",
+    "X18 gross profit / total assets\n",
+    "X19 gross profit / sales\n",
+    "X20 (inventory * 365) / sales\n",
+    "X21 sales (n) / sales (n-1)\n",
+    "X22 profit on operating activities / total assets\n",
+    "X23 net profit / sales\n",
+    "X24 gross profit (in 3 years) / total assets\n",
+    "X25 (equity - share capital) / total assets\n",
+    "X26 (net profit + depreciation) / total liabilities\n",
+    "X27 profit on operating activities / financial expenses\n",
+    "X28 working capital / fixed assets\n",
+    "X29 logarithm of total assets\n",
+    "X30 (total liabilities - cash) / sales\n",
+    "X31 (gross profit + interest) / sales\n",
+    "X32 (current liabilities * 365) / cost of products sold\n",
+    "X33 operating expenses / short-term liabilities\n",
+    "X34 operating expenses / total liabilities\n",
+    "X35 profit on sales / total assets\n",
+    "X36 total sales / total assets\n",
+    "X37 (current assets - inventories) / long-term liabilities\n",
+    "X38 constant capital / total assets\n",
+    "X39 profit on sales / sales\n",
+    "X40 (current assets - inventory - receivables) / short-term liabilities\n",
+    "X41 total liabilities / ((profit on operating activities + depreciation) * (12/365))\n",
+    "X42 profit on operating activities / sales\n",
+    "X43 rotation receivables + inventory turnover in days\n",
+    "X44 (receivables * 365) / sales\n",
+    "X45 net profit / inventory\n",
+    "X46 (current assets - inventory) / short-term liabilities\n",
+    "X47 (inventory * 365) / cost of products sold\n",
+    "X48 EBITDA (profit on operating activities - depreciation) / total assets\n",
+    "X49 EBITDA (profit on operating activities - depreciation) / sales\n",
+    "X50 current assets / total liabilities\n",
+    "X51 short-term liabilities / total assets\n",
+    "X52 (short-term liabilities * 365) / cost of products sold)\n",
+    "X53 equity / fixed assets\n",
+    "X54 constant capital / fixed assets\n",
+    "X55 working capital\n",
+    "X56 (sales - cost of products sold) / sales\n",
+    "X57 (current assets - inventory - short-term liabilities) / (sales - gross profit - depreciation)\n",
+    "X58 total costs /total sales\n",
+    "X59 long-term liabilities / equity\n",
+    "X60 sales / inventory\n",
+    "X61 sales / receivables\n",
+    "X62 (short-term liabilities *365) / sales\n",
+    "X63 sales / short-term liabilities\n",
+    "X64 sales / fixed assets"
    ]
   },
   {
