--- a/case study 4/Model_D.ipynb
+++ b/case study 4/Model_D.ipynb
@@ -500,6 +500,21 @@
      "text": [
       "Fitting 5 folds for each of 48 candidates, totalling 240 fits\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=RandomForestClassifier(random_state=58),\n",
+       "             param_grid={'criterion': ['gini', 'entropy'],\n",
+       "                         'max_depth': [10, 15, 20],\n",
+       "                         'max_features': ['auto', 'sqrt'],\n",
+       "                         'n_estimators': [25, 50, 100, 200]},\n",
+       "             verbose=1)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -516,9 +531,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'criterion': 'gini',\n",
+       " 'max_depth': 15,\n",
+       " 'max_features': 'auto',\n",
+       " 'n_estimators': 200}"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "best_model = CV_rfc.best_params_\n",
     "CV_rfc.best_params_"
@@ -526,13 +555,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix \n",
+      " [[30981     0]\n",
+      " [    0  1572]]\n",
+      "\n",
+      " Classification Report \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0   1.000000  1.000000  1.000000     30981\n",
+      "           1   1.000000  1.000000  1.000000      1572\n",
+      "\n",
+      "    accuracy                       1.000000     32553\n",
+      "   macro avg   1.000000  1.000000  1.000000     32553\n",
+      "weighted avg   1.000000  1.000000  1.000000     32553\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "rf_clf=RandomForestClassifier(best_model)\n",
     "rf_clf3.fit(X_train, y_train)\n",
-    "y_hat_rf_train4 = rf_clf3.predict(X_train)\n",
+    "y_hat_rf_train4 = rf_clf3.predict(X_test)\n",
     "print(\"Confusion Matrix \\n\",confusion_matrix(y_train, y_hat_rf_train4))\n",
     "print(\"\\n Classification Report \\n\",classification_report(y_train, y_hat_rf_train4, digits=6))"
    ]
