--- a/case study 4/Model_S_V2.ipynb
+++ b/case study 4/Model_S_V2.ipynb
@@ -604,37 +604,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "cv_grid = StratifiedKFold(n_splits=10,  shuffle=True,random_state=58)"
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "cv_grid = StratifiedShuffleSplit(n_splits=10,test_size=0.2,random_state=58)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=StratifiedKFold(n_splits=10, random_state=58, shuffle=True),\n",
+       "             estimator=RandomForestClassifier(random_state=58), n_jobs=2,\n",
+       "             param_grid={'class_weight': [None], 'max_depth': [20],\n",
+       "                         'max_features': ['auto'],\n",
+       "                         'n_estimators': [25, 30, 35]},\n",
+       "             scoring='precision')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rf_clf2 = RandomForestClassifier(random_state=58)\n",
     "param_grid = { \n",
-    "    'n_estimators': [25,50,100,200],\n",
-    "    'max_features': ['auto', 'sqrt'],\n",
-    "    'max_depth' : [10,15,20],\n",
-    "    'criterion' :['gini'],\n",
-    "    'class_weight' : ['balanced',None]\n",
+    "    'n_estimators': [25,30,35],\n",
+    "    'max_features': ['auto'],\n",
+    "    'max_depth' : [20],\n",
+    "    'class_weight' : [None]\n",
     "}\n",
-    "CV_rfc = GridSearchCV(estimator=rf_clf2, param_grid=param_grid, cv=cv_grid, n_jobs=2)\n",
+    "CV_rfc = GridSearchCV(estimator=rf_clf2, param_grid=param_grid, cv=cv_grid, n_jobs=2, scoring='precision')\n",
     "CV_rfc.fit(X_imp_scaled, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'class_weight': None,\n",
+       " 'max_depth': 20,\n",
+       " 'max_features': 'auto',\n",
+       " 'n_estimators': 35}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "best_model = CV_rfc.best_params_\n",
     "CV_rfc.best_params_"
@@ -642,37 +671,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=20, n_estimators=35, random_state=58)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CV_rfc.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_predict\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "y_pred = cross_val_predict(CV_rfc.best_estimator_, X_imp_scaled, y, cv=cv_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf_mat = confusion_matrix(y, y_pred)\n",
+    "cl_report = classification_report(y, y_pred, digits=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[41201,   113],\n",
+       "       [ 1354,   737]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conf_mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Confusion Matrix \n",
-      " [[30981     0]\n",
-      " [    0  1572]]\n",
       "\n",
       " Classification Report \n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0   1.000000  1.000000  1.000000     30981\n",
-      "           1   1.000000  1.000000  1.000000      1572\n",
+      "           0   0.968182  0.997265  0.982508     41314\n",
+      "           1   0.867059  0.352463  0.501190      2091\n",
       "\n",
-      "    accuracy                       1.000000     32553\n",
-      "   macro avg   1.000000  1.000000  1.000000     32553\n",
-      "weighted avg   1.000000  1.000000  1.000000     32553\n",
+      "    accuracy                       0.966202     43405\n",
+      "   macro avg   0.917621  0.674864  0.741849     43405\n",
+      "weighted avg   0.963311  0.966202  0.959321     43405\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "rf_clf=RandomForestClassifier(best_model)\n",
-    "rf_clf3.fit(X_train, y_train)\n",
-    "y_hat_rf_train4 = rf_clf3.predict(X_test)\n",
-    "print(\"Confusion Matrix \\n\",confusion_matrix(y_train, y_hat_rf_train4))\n",
-    "print(\"\\n Classification Report \\n\",classification_report(y_train, y_hat_rf_train4, digits=6))"
+    "print(\"\\n Classification Report \\n\",cl_report)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'XGBoostRegressor' from 'xgboost' (/Users/satvikajmera/miniforge3/envs/tensorflow/lib/python3.9/site-packages/xgboost/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/zl/4qqdwn7s6wv34lrr9sxt7tf40000gn/T/ipykernel_11269/3769053939.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mXGBoostRegressor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'XGBoostRegressor' from 'xgboost' (/Users/satvikajmera/miniforge3/envs/tensorflow/lib/python3.9/site-packages/xgboost/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from xgboost import XGBoostRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
