--- a/case study 5/Case_Study_05_S.ipynb
+++ b/case study 5/Case_Study_05_S.ipynb
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59a9b2d1",
+   "id": "8b698f4e",
    "metadata": {},
    "source": [
     "allow         37640\n",
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81a74b2a",
+   "id": "780ca56d",
    "metadata": {},
    "source": [
     "One-Hot-Encode"
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8f366d6d",
+   "id": "d896c342",
    "metadata": {
     "scrolled": true
    },
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e7d0da53",
+   "id": "f9992096",
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2ef42223",
+   "id": "0872a859",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0390a685",
+   "id": "cf7b6fbe",
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1828,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "10f5c3d5",
+   "id": "671305f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1840,7 +1840,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4ec3711d",
+   "id": "6fda49fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1860,7 +1860,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2aa79d0c",
+   "id": "640cb582",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1870,7 +1870,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5f0165bc",
+   "id": "63e870b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1879,35 +1879,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "1aa683c6",
+   "execution_count": 35,
+   "id": "02a344d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.01670637, -0.01259007, -0.02793031, ...,  0.        ,\n",
-       "         0.        ,  0.        ],\n",
-       "       [-0.01670128, -0.01258325, -0.02793031, ...,  0.        ,\n",
-       "         0.        ,  0.        ],\n",
-       "       [ 0.0086734 , -0.01032094,  0.06239575, ...,  0.        ,\n",
-       "         0.        ,  0.        ],\n",
-       "       ...,\n",
-       "       [-0.01670065, -0.01258239, -0.02793031, ...,  0.        ,\n",
-       "         0.        ,  0.        ],\n",
-       "       [-0.01670612, -0.01258973, -0.02793031, ...,  0.        ,\n",
-       "         0.        ,  0.        ],\n",
-       "       [-0.01670612, -0.01258973, -0.02793031, ...,  0.        ,\n",
-       "         0.        ,  0.        ]])"
+       "(6554, 57685)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_test_scaled"
+    "X_test_scaled.shape"
    ]
   },
   {
