--- a/case study 5/Case_Study_05_S.ipynb
+++ b/case study 5/Case_Study_05_S.ipynb
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "799e24bc",
+   "id": "fd09f4d8",
    "metadata": {},
    "source": [
     "allow         37640\n",
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "226f9f1e",
+   "id": "f8029ec1",
    "metadata": {},
    "source": [
     "One-Hot-Encode"
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dff780ce",
+   "id": "a75b33dc",
    "metadata": {
     "scrolled": true
    },
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4aa062ca",
+   "id": "d896b72b",
    "metadata": {},
    "outputs": [
     {
@@ -935,18 +935,89 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ea5be4b8",
+   "id": "aed207dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.10,random_state=4)"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from scipy.sparse import csr_matrix"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ee68a1d5",
+   "id": "9acc53ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standard_transformer = Pipeline(steps=[\n",
+    "        ('standard', StandardScaler())])\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "        remainder='passthrough', #passthough features not listed\n",
+    "        transformers=[\n",
+    "            ('std', standard_transformer , ['Bytes', 'Bytes Sent',\n",
+    "       'Bytes Received', 'Packets', 'Elapsed Time (sec)', 'pkts_sent','pkts_received'])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "690d7f54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_full = preprocessor.fit_transform(X) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1b808fe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(65532, 57685)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_full.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "88cc24fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_full = csr_matrix(X_full)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea5be4b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20,random_state=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e0825044",
    "metadata": {},
    "outputs": [
     {
@@ -1390,38 +1461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "6581ac28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from scipy.sparse import csr_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "69e36c40",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "standard_transformer = Pipeline(steps=[\n",
-    "        ('standard', StandardScaler())])\n",
-    "\n",
-    "preprocessor = ColumnTransformer(\n",
-    "        remainder='passthrough', #passthough features not listed\n",
-    "        transformers=[\n",
-    "            ('std', standard_transformer , ['Bytes', 'Bytes Sent',\n",
-    "       'Bytes Received', 'Packets', 'Elapsed Time (sec)', 'pkts_sent','pkts_received'])])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
-   "id": "b68d5456",
+   "id": "832cf4ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1432,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4ff1b276",
+   "id": "98d2cd43",
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "dae7360e",
+   "id": "db16b747",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1465,7 +1506,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "972ccef2",
+   "id": "3d6a7c7c",
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f9795590",
+   "id": "478b572d",
    "metadata": {},
    "outputs": [
     {
@@ -1509,8 +1550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "47ad4b7d",
+   "execution_count": 21,
+   "id": "8ea3e6b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,8 +1564,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "fe1790b6",
+   "execution_count": 22,
+   "id": "b3f2111d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1534,8 +1575,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "a0d3cc87",
+   "execution_count": 23,
+   "id": "503218d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1544,45 +1585,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "b86d964a",
+   "execution_count": 24,
+   "id": "10627008",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 23.2 s, sys: 55.2 ms, total: 23.3 s\n",
-      "Wall time: 23.3 s\n"
+      "CPU times: user 15.7 s, sys: 40.2 ms, total: 15.7 s\n",
+      "Wall time: 15.7 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0.99593082, 0.99559173, 0.99576128, 0.99576128, 0.99423533,\n",
-       "       0.99626992, 0.99474398, 0.99593082, 0.99491267, 0.99576056])"
+       "array([0.99282881, 0.99633811, 0.99755837, 0.99252251, 0.99298031,\n",
+       "       0.99664276, 0.9919121 , 0.99114909, 0.99130169, 0.99603235])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "cross_val_score(lsvc,X_train_scaled,y_train, cv = skf_cv)"
+    "cross_val_score(lsvc,X_full,y, cv = skf_cv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "4c41062a",
+   "execution_count": 31,
+   "id": "f3b4b5c2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 2, 1, ..., 1, 3, 1])"
+       "0.9939266100000002"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean([0.99282881, 0.99633811, 0.99755837, 0.99252251, 0.99298031,\n",
+    "       0.99664276, 0.9919121 , 0.99114909, 0.99130169, 0.99603235])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "41a93f08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8f1902b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc = SVC()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2425db8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6min 21s, sys: 7.85 s, total: 6min 29s\n",
+      "Wall time: 6min 29s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.99633811, 0.99816906, 0.99710056, 0.99649016, 0.99633756,\n",
+       "       0.99649016, 0.9914543 , 0.99603235, 0.99572715, 0.99572715])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "cross_val_score(svc,X_full,y, cv = skf_cv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "3b9154b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9959866560000001"
       ]
      },
      "execution_count": 30,
@@ -1591,13 +1705,15 @@
     }
    ],
    "source": [
-    "lsvc.predict(X_test_scaled)\n"
+    "# lsvc.predict(X_test_scaled)\n",
+    "np.mean([0.99633811, 0.99816906, 0.99710056, 0.99649016, 0.99633756,\n",
+    "       0.99649016, 0.9914543 , 0.99603235, 0.99572715, 0.99572715])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4b580e9c",
+   "id": "4929827e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1723,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "99e01ef7",
+   "id": "2f7256a1",
    "metadata": {},
    "outputs": [
     {
