Forgot context on drop action for utilizing ovo or ovr

--- a/case study 5/Case_Study_05_T.ipynb
+++ b/case study 5/Case_Study_05_T.ipynb
@@ -270,7 +270,7 @@
     "\n",
     "Additionally, there is a extrememly small percentage of rows with \"reset-both\" (54 rows, i.e., less than 1% of the data). I will be dropping it as such a small amount of data in comparision to the rest would most likely not be sufficient to represent the actual populations behavior for prediction.\n",
     "\n",
-    "Next, as we've reviewed some background knowledge from TrendMicro, \"drop\" traffic is not an explicit \"deny\" rule, rather it is dropped as there is no rule to handle such traffic. We will need to decide whether to add \"drop\" to \"deny\" or drop those rows altogether.\n",
+    "Next, as we've reviewed some background knowledge from TrendMicro, \"drop\" traffic is not an explicit \"deny\" rule, rather it is dropped as there is no rule to handle such traffic. We will need to decide whether to add \"drop\" to \"deny\" or drop those rows altogether. This decision will impact whether or not our decision function for the SVM is set nas a one-vs-one (ovo) or one-vs-rest (ovr) approach.\n",
     "\n",
     "As for the duplicates, it should not be a concern as they target the same \"Action\" or label. For now, I will not drop the duplicate tdataset since the duplicates are negligible in the size of the dataset (the highest duplicate count is less than 0.1% of the total dataset; total duplicates is .16%)"
    ]
