--- a/case study 5/Case_Study_05_S.ipynb
+++ b/case study 5/Case_Study_05_S.ipynb
@@ -1005,6 +1005,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "0dc81d87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<65532x57685 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 663642 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_full"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "28eef09a",
    "metadata": {},
@@ -1108,7 +1130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "256f1c70",
+   "id": "254add6a",
    "metadata": {},
    "source": [
     "## Linear SVC"
@@ -1156,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12d579ca",
+   "id": "5b08238e",
    "metadata": {},
    "source": [
     "## SVC "
@@ -1196,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3bc5ba1b",
+   "id": "ac682967",
    "metadata": {},
    "outputs": [
     {
@@ -1212,14 +1234,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "004cb02e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "b3b2a32b",
    "metadata": {},
@@ -1229,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 113,
    "id": "200ff573",
    "metadata": {},
    "outputs": [],
@@ -1237,21 +1251,13 @@
     "from sklearn.linear_model import SGDClassifier\n",
     "\n",
     "skf_cv = StratifiedKFold(n_splits=10)\n",
-    "sgd = SGDClassifier(early_stopping=True, max_iter=10000)"
+    "sgd = SGDClassifier(early_stopping=True, max_iter=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "57e4cf89",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "02d30597",
+   "execution_count": 114,
+   "id": "e6b4c30a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,16 +1266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "3fde4d45",
+   "execution_count": 115,
+   "id": "3add97e0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.98474214 0.99649069 0.99679536 0.9916069  0.99267511 0.99130169\n",
-      " 0.98992828 0.98992828 0.99053868 0.98809705]\n"
+      "[0.98413183 0.99694843 0.99694796 0.9919121  0.99313292 0.99282771\n",
+      " 0.98901267 0.99069129 0.99069129 0.98916527]\n"
      ]
     }
    ],
@@ -1279,15 +1285,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "f5feb049",
+   "execution_count": 116,
+   "id": "2fdb7b86",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9912104191540531\n"
+      "0.9915461455782644\n"
      ]
     }
    ],
@@ -1297,8 +1303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "826eb340",
+   "execution_count": 117,
+   "id": "dd2139d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,15 +1313,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "76d3c623",
+   "execution_count": 118,
+   "id": "0b4e94c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "GridSearchCV(cv=StratifiedKFold(n_splits=10, random_state=None, shuffle=False),\n",
-       "             estimator=SGDClassifier(early_stopping=True, max_iter=10000),\n",
+       "             estimator=SGDClassifier(early_stopping=True),\n",
        "             param_grid={'alpha': [0.03, 0.05, 0.2, 0],\n",
        "                         'class_weight': ['balanced', None], 'eta0': [0.02],\n",
        "                         'learning_rate': ['adaptive', 'constant',\n",
@@ -1324,7 +1330,7 @@
        "             scoring='accuracy')"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,18 +1349,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "db756a3b",
+   "execution_count": 119,
+   "id": "a23895bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "SGDClassifier(alpha=0, early_stopping=True, eta0=0.02, learning_rate='adaptive',\n",
-       "              max_iter=10000, penalty='elasticnet')"
+       "              penalty='elasticnet')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,8 +1371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "e49dd262",
+   "execution_count": 120,
+   "id": "4677f279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,8 +1381,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "46f45657",
+   "execution_count": 121,
+   "id": "b017b6d2",
    "metadata": {
     "scrolled": true
    },
@@ -1391,7 +1397,7 @@
        " 'penalty': 'elasticnet'}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd935f63",
+   "id": "8780584c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1411,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "45629081",
+   "id": "ae4351cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "2c1204f5",
+   "id": "0335dcbf",
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1449,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "73aa1977",
+   "id": "28c718a0",
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "cbeda83f",
+   "id": "cec9bfff",
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1487,7 @@
    ],
    "source": [
     "new_sgd = SGDClassifier(early_stopping=True, eta0=0.02, learning_rate='adaptive',\n",
-    "              max_iter=10000)\n",
+    "              max_iter=1000)\n",
     "\n",
     "cross_val_score(new_sgd,X_full,y, cv = skf_cv)"
    ]
@@ -1489,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "169a7938",
+   "id": "0cd37c0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1499,7 +1505,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "77e45d60",
+   "id": "bf33b894",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1523,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "9673d1e8",
+   "id": "7b43352f",
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "ec298c67",
+   "id": "90d92da1",
    "metadata": {},
    "outputs": [
     {
@@ -1574,7 +1580,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "038550e3",
+   "id": "d1bc9817",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "6caf5984",
+   "id": "66485c94",
    "metadata": {},
    "outputs": [
     {
@@ -1605,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a50f91eb",
+   "id": "ea12439d",
    "metadata": {},
    "outputs": [],
    "source": []
